--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Parker's Blog
 description: My Personal Blog
 author: Parker
-logo: /myBlog/static/img/avatar.jpg
+logo: /static/img/avatar.jpg
 github: https://github.com/ParkerTzh
 about: Freelance developer
 
