--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: My Personal Blog
 author: Parker
 logo: /static/img/avatar.jpg
 github: https://github.com/ParkerTzh
-about: Freelance developer
+about: 1437477446@qq.com
 
 #baseurl: "https://parkertzh.github.io/myBlog/"  # Github 线上
 baseurl: "https://www.sucblog.com"  # 绑定域名 sucblog.com
